# elisa-quiz-prototype

./: .gitignore  BACKLOG.md  HACKING.md  README.md  docker-compose-dev.yml  docker-compose.yml.template  elisa-pip.service.template  elisa-poetry.service.template  elisa-quiz-pip.service.template  elisa-quiz-poetry.service.template  elisa-quiz.service  package-lock.json  package.json
backend/: .dockerignore  .env.template  Dockerfile  main.py  pyproject.toml
backend/docker/: create-indices.js  mongo-users.js
backend/elisa/: .env.template  app.py  shared.py
backend/elisa/agents/: prototype.py
backend/elisa/ai/: _agent.py  _agent_router.py  _guard_rail.py  _summarizer.py  _title_generator.py  assistant.py  callback.py  chat.py  chat.py_OLD  memory.py  models.py  registry.py  shared.py  types.py
backend/elisa/ai/_agent_routers/: default.py
backend/elisa/ai/_agents/: choice.py  default.py  exam_interview.py  quiz.py
backend/elisa/ai/_guard_rails/: content_safety_llm.py  message_size.py
backend/elisa/ai/_summarizers/: default.py
backend/elisa/ai/_title_generators/: default.py
backend/elisa/ai/activity/: types.py
backend/elisa/ai/agent/: all.py  base.py  registry.py  types.py
backend/elisa/ai/guard/: base.py  registry.py  types.py
backend/elisa/ai/router/: base.py  registry.py  types.py
backend/elisa/ai/summary/: base.py  registry.py  types.py
backend/elisa/ai/title/: base.py  registry.py  types.py
backend/elisa/auth/: exceptions.py  user.py
backend/elisa/core/: database.py  typing.py  websocket.py
backend/elisa/database/: analytics.py  error.py  shared.py  user.py  utils.py
backend/elisa/database/analytics/: db.py  types.py
backend/elisa/database/error/: db.py  types.py
backend/elisa/handlers/: analytics.py  chat.py  error.py
backend/elisa/websocket/: decorators.py  parent.py  registry.py  types.py
backend/elisa_quiz/: .env.template  app.py  llm.py  websocket.py
backend/elisa_quiz/agents/: prototype.py
backend/elisa_quiz/core/: database.py  decorators.py  llm.py  websocket.py
backend/elisa_quiz/database/: analytics.py  error.py  user.py
backend/elisa_quiz/handlers/: analytics.py  chat.py  connection.py  error.py
frontend/: .dockerignore  (+3 more)
(+82 files in other folders)
